# codegen-cli

./: .pre-commit-config.yaml  README.md  pull_request_template.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linting.yml  testing.yml
codegen/: __init__.py  init.py  languages.py  main.py  model.py
tests/: test_cli.py  test_placeholder.py
