[tool.poetry]
name = "codegen"
version = "0.1.0"
description = ""
authors = ["Michael Tinsley <michaeltinsley@outlook.com>"]
license = "MIT"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = "^0.6.1"
transformers = "^4.22.1"
rich = "^12.6.0"
shellingham = "^1.5.0"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
